# NeuStack

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  setup  setup.bat
.github/workflows/: ci.yml  release.yml
bpf/: xdp_redirect.c
cmake/: BPFCompile.cmake  FindONNXRuntime.cmake  NeuStackConfig.cmake.in  Platform.cmake
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: project_whitepaper.md
docs/api/: README.md  af-xdp.md  ai-inference.md  ai-training.md  benchmark.md  core.md  firewall.md  integration.md  telemetry.md
docs/tutorial/: 05_tcp_basics.md  06_tcp_connection.md  07_tcp_reliability.md  08_tcp_congestion_flow.md  09_tcp_layer.md  10_http_server.md  11_dns_client.md  12_tls.md  extra_01_logging.md
docs/tutorial/phase1_foundation/: 01_hal.md  02_ipv4.md  03_icmp_arp.md  04_udp.md  05_tcp_basics.md  07_tcp_reliability.md  10_http_server.md  11_http_client.md  12_dns_client.md  13_tls.md  extra_02_stream_interface.md  extra_03_ring_buffer.md
docs/tutorial/phase2_ai/: 00_overview.md  01_dual_thread_architecture.md  02_metrics_collection.md  03_onnx_integration.md  04_anomaly_detection.md  05_bandwidth_prediction.md  06_orca_congestion_control.md  07_real_deployment.md
examples/: CMakeLists.txt  README.md  afxdp_test.cpp  ai_test.cpp  api_server.cpp  dns_example.cpp  echo_server.cpp  fw_example.cpp  http_client.cpp  https_server.cpp  minimal.cpp  neustack_demo.cpp  ping_example.cpp  telemetry_example.cpp  udp_example.cpp
include/neustack/: firewall.hpp  neustack.hpp
include/neustack/ai/: ai_agent.hpp  ai_model.hpp  anomaly_model.hpp  bandwidth_model.hpp  intelligence_plane.hpp  onnx_inference.hpp  onnxruntime_mingw_compat.hpp  orca_model.hpp  security_model.hpp
include/neustack/app/: dns_client.hpp  http_client.hpp  http_parser.hpp  http_server.hpp  http_types.hpp
include/neustack/common/: checksum.hpp  ip_addr.hpp  log.hpp  (+7 more)
models/: anomaly_detector.onnx  bandwidth_predictor.onnx  orca_actor.onnx  security_anomaly.onnx  test_simple.onnx
scripts/: collect_all.sh  create_test_models.py  csv_to_dataset.py  download_onnxruntime.sh  merge_and_generate.sh
scripts/bench/: benchmark_runner.py  collect_env.sh  plot_results.py  run_ablation.sh  run_all_benchmarks.sh  run_throughput_test.sh
scripts/download/: download_onnxruntime.sh  download_wintun.sh
scripts/linux/: collect.sh  collect_bwvar.sh  collect_security.sh  setup.sh  traffic.sh  traffic_anomaly.sh  traffic_security.sh
scripts/mac/: collect.sh  collect_local_tc.sh  collect_security.sh  setup.sh  traffic.sh  traffic_anomaly.sh  traffic_security.sh
scripts/nat/: setup_nat.sh  teardown_nat.sh
scripts/python/: csv_to_dataset.py
scripts/tls/: gen_self_signed_cert.sh
scripts/windows/: setup.ps1
src/: main.cpp  neustack.cpp
src/ai/: ai_agent.cpp  anomaly_model.cpp  bandwidth_model.cpp  intelligence_plane.cpp  onnx_inference.cpp  orca_model.cpp  security_model.cpp
src/app/: dns_client.cpp  http_client.cpp  http_parser.cpp  http_server.cpp  http_types.cpp
src/common/: checksum.cpp  ip_addr.cpp  json_builder.cpp
src/firewall/: firewall_ai.cpp  firewall_engine.cpp
src/hal/: device.cpp  hal_linux.cpp  hal_linux_afxdp.cpp  hal_macos.cpp  hal_windows.cpp  umem.cpp
src/metrics/: ai_features.cpp
src/net/: icmp.cpp  ipv4.cpp
src/telemetry/: http_endpoints.cpp  json_exporter.cpp  metrics_registry.cpp  prometheus_exporter.cpp  telemetry_api.cpp
src/tls/: tls_connection.cpp  tls_context.cpp  tls_layer.cpp
src/transport/: tcp_builder.cpp  tcp_connection.cpp  tcp_layer.cpp  tcp_segment.cpp  udp.cpp
tests/: CMakeLists.txt
tests/benchmark/: bench_afxdp_datapath.cpp  bench_checksum.cpp  bench_e2e_throughput.cpp  bench_http.cpp  bench_memory_pool.cpp  bench_metrics_hotpath.cpp  bench_spsc_queue.cpp  bench_tcp_conn.cpp  bench_tcp_throughput.cpp
tests/fuzz/: CMakeLists.txt  README.md  dns_parser_fuzzer.cpp  http_parser_fuzzer.cpp  ipv4_parser_fuzzer.cpp  tcp_parser_fuzzer.cpp
tests/helpers/: json_validator.hpp  tls_test_utils.hpp
tests/integration/: test_ai_models.cpp  test_firewall_ai_shadow.cpp  test_firewall_e2e.cpp  test_firewall_integration.cpp  test_http_roundtrip.cpp  test_onnx_runtime.cpp  test_tcp_handshake.cpp  test_tcp_stress.cpp  test_tls_roundtrip.cpp
tests/unit/: test_http_parser.cpp  test_ip_addr.cpp  test_ring_buffer.cpp  test_spsc_queue.cpp  test_tcp_builder.cpp  test_tcp_cubic.cpp  test_tcp_orca.cpp  test_tcp_reno.cpp  test_tcp_sample.cpp
tests/unit/ai/: test_ai_agent.cpp  test_ai_features.cpp  test_security_model.cpp
tests/unit/app/: test_http_edge.cpp  test_http_parser.cpp  test_http_types.cpp
tests/unit/common/: test_checksum.cpp  test_json_builder.cpp  test_memory_pool.cpp
tests/unit/firewall/: test_firewall_ai.cpp  test_rate_limiter.cpp  test_rule_engine.cpp
tests/unit/hal/: test_afxdp_config.cpp  test_batch_device.cpp  test_bpf_object.cpp  test_ethernet.cpp  test_umem.cpp  test_xdp_ring.cpp
tests/unit/metrics/: test_global_metrics.cpp
tests/unit/net/: test_icmp.cpp  test_ip_edge.cpp
tests/unit/telemetry/: test_http_endpoints.cpp  test_json_exporter.cpp  test_metrics_registry.cpp  test_prometheus_exporter.cpp  test_telemetry_api.cpp
tests/unit/tls/: test_tls_connection.cpp  test_tls_layer.cpp
tests/unit/transport/: test_tcp_builder.cpp  test_tcp_edge.cpp  test_tcp_exception.cpp  test_tcp_segment.cpp  test_tcp_seq.cpp  test_udp_edge.cpp
tools/: CMakeLists.txt  neustack_stat.cpp  udp_flood.cpp
tools/dashboard/: dashboard_embed.hpp.in  index.html
training/: environment.yml
training/anomaly/: calibrate_threshold.py  config.yaml  dataset.py  export_onnx.py  model.py  train.py
training/bandwidth/: config.yaml  dataset.py  export_onnx.py  model.py  train.py
training/orca/: config.yaml  ddpg.py  env.py  export_onnx.py  network.py  replay_buffer.py  sac.py  train.py
training/real_data/: anomaly_dataset.npz  bandwidth_dataset.npz  orca_dataset.npz
training/security/: config.yaml  data_clean.py  dataset.py  export_onnx.py  model.py  train.py
(+50 files in other folders)
